# cociplan

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker.client.Dockerfile  pyproject.toml
.github/: copilot-commit-message-instructions.md
.github/workflows/: django.yml  docker-build-publish-backend-latest.yml  docker-build-publish-backend-tag.yml  docker-build-publish-client-latest.yml  docker-build-publish-client-tag.yml  react.yml
client/: .eslintrc.js  package-lock.json  package.json
